# event-importance-sgs3

./: .gitignore  Android.mk  CMakeLists.txt  ImportanceClient.cpp  ImportanceClient.h  README.txt  activity.c  activity.h  common.h  config.h  copy_include_libs.sh  core.c  core.h  debug.c  debug.h  device_events.c  device_events.h  fix-foxconn.sh  hardware.c  importance.c  importance.h  my_sysinfo.c  my_sysinfo.h  mytimerfd.c  mytimerfd.h  netlink.c  netlink.h  parse.c  parse.h  thread.c  thread.h  timer.c  timer.h  touch.c  touch.h  vector.c  vector.h
apk/: com.estrongs.android.pop-1.apk  com.ftpcafe.trial-1.apk
exp/: core_flow.plt  exp_detail.xlsx  freq_flow.plt  h_energy.plt  h_performance.plt  idle_power.plt  l1_energy.plt  l1_performance.plt  l2_energy.plt  l2_performance.plt  l_energy.plt  m_energy.plt  m_performance.plt  powermodel.plt
include/: cn_proc.h
profile_sys/: CMakeLists.txt  profile_sys.c
sendevent/: f.sh  ft.sh  fv.sh  fz.sh  fzt.sh  fzv.sh  t.sh  v.sh  z.sh  zt.sh  zv.sh
